# small-googletest

./: CMakeLists.txt  Makefile  README.md  allFile.txt  hello.cpp
test/: example_test.cpp
